--- a/src/styling/AssignmentCard.css
+++ b/src/styling/AssignmentCard.css
@@ -1,7 +1,7 @@
 .Assignment-card-mainbody {
   border: solid black 1px;
   border-radius: 2px;
-  margin-bottom: 5px;
+  margin: 5px;
 }
 .Assignment-card-extra-unassigned {
   margin: 5px;
