--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,10 @@
     background-color: rgb(52 211 153);
     border-radius: 4px;
   }
+  .form3 {
+    display: flex;
+    flex-direction: column;
+  }
 
   .form-container {
     background-color: rgb(52 211 153);
@@ -30,6 +34,14 @@
     margin: 5px;
     padding: 5px;
     border-radius: 4px;
+  }
+  .button-real {
+    background-color: white;
+    margin: 5px;
+
+    padding: 5px;
+    border-radius: 4px;
+    width: 200px;
   }
   .gallery {
     border-top: solid black 1px;
